kubernetes/connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect
  labels:
    app: connect
spec:
  ports:
    - port: 8083
      name: connect
  selector:
    app: connect
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"kafka"},{"apiVersion":"apps/v1","kind":"Deployment","name":"mongodb"},{"apiVersion":"apps/v1","kind":"Deployment","name":"mysql"}]'
  name: connect
  labels:
    app: connect
    app.kubernetes.io/part-of: sfp-infra
spec:
  selector:
    matchLabels:
      app: connect
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
      - image: quay.io/hgrahsl/sfp-kafka-connect:1.0.0-amd64
        name: connect
        command: [
          "sh", "-c",
          "bin/connect-distributed.sh config/connect-distributed.properties"
        ]
        volumeMounts:
            - name: config
              mountPath: /opt/kafka/config/
        imagePullPolicy: IfNotPresent
      volumes:
        - name: config
          configMap:
            name: connect-config
