kubernetes/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    app.kubernetes.io/part-of: sfp-monolith
    app.openshift.io/runtime: mysql-database
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: quay.io/hgrahsl/mysql:5.7.40
          args: ["--default-authentication-plugin=mysql_native_password","--log-bin=binlog","--server-id=12345"]
          ports:
            - containerPort: 3306
              name: mysql
