kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"quarkus-owner-service"},{"apiVersion":"apps/v1","kind":"Deployment","name":"spring-petclinic"}]'
  labels:
    app: nginx
    app.kubernetes.io/part-of: sfp-infra
    app.openshift.io/runtime: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: quay.io/hgrahsl/sfp-proxy:1.0.0-amd64
          name: nginx
          ports:
          - containerPort: 8080
            name: nginx
          volumeMounts:
            - name: proxy-config
              mountPath: /etc/nginx/
          imagePullPolicy: Always
      volumes:
        - name: proxy-config
          configMap:
            name: sfp-proxy-conf-initial
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  type: NodePort
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sfp-proxy
  labels:
    app: nginx
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
spec:
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
